--- a/Index.html
+++ b/Index.html
@@ -8,9 +8,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Styles/styles.css">
-    <title>Index</title>
+    <title>Студия</title>
 </head>
 <body>
-    
+    <header>
+        <a href="Index.html">
+            WebStudio
+        </a>
+        <nav>
+            <ul>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </nav>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+            <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> </li>
+        </ul>
+    </header>
 </body>
 </html>
