--- a/Index.html
+++ b/Index.html
@@ -61,9 +61,9 @@
             <section>
                 <h2>Чем мы занимаемся</h2>
                 <ul>
-                    <li><img src="/images/box1.png" alt="working_with_computer" width="370"></li>
-                    <li><img src="/images/box2.png" alt="phone_with_computer" width="370"></li>
-                    <li><img src="/images/box3.png" alt="using_tablet" width="370"></li>
+                    <li><img src="/images/what_we_do/box1.png" alt="working_with_computer" width="370"></li>
+                    <li><img src="/images/what_we_do/box2.png" alt="phone_with_computer" width="370"></li>
+                    <li><img src="/images/what_we_do/box3.png" alt="using_tablet" width="370"></li>
                 </ul>
             </section>
         
@@ -93,7 +93,13 @@
         
         <!-- Bottom -->
         <footer>
-            d
+            <a href="Index.html">WebStudio</a>
+            <address>г. Киев, пр-т Леси Украинки, 26</address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a> </li>
+            </ul>
+
         </footer>
 </body>
 </html>
