--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
             <section>
                 <ul>
                     <li>
-                        <h2>Внимание к деталям</h2>
+                        <h3>Внимание к деталям</h3>
                         <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li>
-                        <h2>Пунктуальность</h2>
+                        <h3>Пунктуальность</h3>
                         <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li>
-                        <h2>Планирование</h2>
+                        <h3>Планирование</h3>
                         <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li>
-                        <h2>Современные технологии</h2>
+                        <h3>Современные технологии</h3>
                         <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
@@ -57,9 +57,9 @@
             <section>
                 <h2>Чем мы занимаемся</h2>
                 <ul>
-                    <li><img src="/images/what_we_do/box1.png" alt="working_with_computer" width="370"></li>
-                    <li><img src="/images/what_we_do/box2.png" alt="phone_with_computer" width="370"></li>
-                    <li><img src="/images/what_we_do/box3.png" alt="using_tablet" width="370"></li>
+                    <li><img src="/images/what_we_do/box1.jpg" alt="working_with_computer" width="370"></li>
+                    <li><img src="/images/what_we_do/box2.jpg" alt="phone_with_computer" width="370"></li>
+                    <li><img src="/images/what_we_do/box3.jpg" alt="using_tablet" width="370"></li>
                 </ul>
             </section>
         
@@ -90,12 +90,13 @@
         <!-- Bottom -->
         <footer>
             <a href="Index.html">WebStudio</a>
-            <address>г. Киев, пр-т Леси Украинки, 26</address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a> </li>
-            </ul>
-
+            <address>
+                г. Киев, пр-т Леси Украинки, 26
+                <ul>
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
         </footer>
 </body>
 </html>
